<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeNav_mylibraryFragment"
        android:icon="@drawable/ic_menu_mylibrary_negative"
        android:title="@string/menu_homebottom_mylibrary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/homeNav_readingCalendarFragment"
        android:icon="@drawable/ic_menu_scrapbook_negative"
        android:title="@string/menu_homebottom_reading_calendar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/homeNav_todayOnelineFragment"
        android:icon="@drawable/ic_menu_todayonline_negative"
        android:title="@string/menu_homebottom_todayoneline"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/homeNav_mypageFragment"
        android:icon="@drawable/ic_menu_mypage_negative"
        android:title="@string/menu_homebottom_mypage"
        app:showAsAction="ifRoom"/>
</menu>