<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/all_dialogbackground"
    android:paddingVertical="21dp"
    android:paddingHorizontal="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_bookdetail_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/label_bookdetail_remove_book" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_bookdetail_dialog_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_bookdetail_dialog_title"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/caption_bookdetail_remove_book"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bookdetail_removedialog_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/label_bookdetail_cancel"
        android:background="@drawable/all_roundbutton_negative"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_bookdetail_removedialog_remove"
        app:layout_constraintTop_toBottomOf="@id/label_bookdetail_dialog_caption"
        android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bookdetail_removedialog_remove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/label_bookdetail_remove"
        android:background="@drawable/all_roundbutton_positive"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/btn_bookdetail_removedialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_bookdetail_dialog_caption"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>