<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <com.bookmark.bookmark_oneday.presentation.screens.signup.component.SignupToolbar
        android:id="@+id/toolbar_signup_nickname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:progress="25"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_signup_nickname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_signup_nickname"
        android:layout_marginTop="54dp"
        android:layout_marginStart="30dp"
        android:text="@string/label_signup_set_nickname_title"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.bookmark.bookmark_oneday.presentation.screens.signup.component.SignupEditText
        android:id="@+id/edittext_signup_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_signup_nickname_title"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="36dp"
        app:placeHolder="@string/label_signup_set_nickname_place_holder"
        app:max="10"/>


    <com.bookmark.bookmark_oneday.presentation.screens.signup.component.SignupButton
        android:id="@+id/btn_signup_nickname_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="24dp"
        app:text="@string/label_signup_next"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>