<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/all_dialogbackground"
        android:paddingVertical="21dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_timer_notification_permission_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="32dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_timer_notification_permission_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="32dp"
            android:orientation="vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_timer_notification_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_timer_notification_permission_begin"
            app:layout_constraintEnd_toEndOf="@id/guide_timer_notification_permission_end"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/label_notification_permission" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_timer_notification_permission_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/label_timer_notification_permission_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/mylibrary_permission_info_background"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_timer_notification"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/mylibrary_permission_info_icon_background"
                android:src="@drawable/ic_notification"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_timer_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_timer_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/label_timer_notification_caption"
                android:layout_marginStart="10dp"
                android:text="@string/label_notification"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_timer_notification_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_timer_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_timer_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:text="@string/caption_notification"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_timer_notification_permission_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_timer_notification_permission_begin"
            app:layout_constraintEnd_toEndOf="@id/guide_timer_notification_permission_end"
            app:layout_constraintTop_toBottomOf="@id/cl_timer_notification_permission_info"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:text="@string/caption_notification_permission" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_timer_notification_permission_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/label_confirm"
            app:layout_constraintStart_toStartOf="@id/guide_timer_notification_permission_begin"
            app:layout_constraintEnd_toEndOf="@id/guide_timer_notification_permission_end"
            app:layout_constraintTop_toBottomOf="@id/label_timer_notification_permission_caption"
            android:background="@drawable/all_roundbutton_positive"
            android:textColor="@color/default_background"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>